# virtualcam-rs

./: Cargo.toml  README.md
examples/mp4_to_vcam/: Cargo.toml
examples/mp4_to_vcam/src/: main.rs
src/: lib.rs  obs_vcam.rs  unity_capture.rs
