[package]
name = "virtualcam-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winreg = "0.50.0"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "synchapi", "winbase", "handleapi", "memoryapi"] }
