[package]
name = "virtualcam-rs"
version = "0.1.0"
edition = "2021"
authors = ["ITisl <1831207432@qq.com>"]
git = "https://github.com/itisl2220/virtualcam-rs.git"
description = "A virtual camera for Windows"
license = "MIT"
email = "1831207432@qq.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winreg = "0.50.0"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "synchapi", "winbase", "handleapi", "memoryapi"] }
